# qt_drone

./: CMakeLists.txt  CMakeLists.txt~  manifest.xml  package.xml
src/: controller.cpp
src/qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui  opencvDemo.pro  ui_mainwindow.h
